Decouple Pelops as a submodule. Issue #385