@@ -8,9 +8,9 @@
 	</parent>
 
 	<groupId>com.impetus.kundera.client</groupId>
-	<artifactId>kundera-cassandra</artifactId>
-	<packaging>jar</packaging>
-	<name>kundera-cassandra</name>
+	<artifactId>kundera-cassandra-parent</artifactId>
+	<packaging>pom</packaging>
+	<name>kundera-cassandra-parent</name>
 	<url>http://maven.apache.org</url>
 
 	<repositories>
@@ -77,23 +77,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.cassandra</groupId>
-			<artifactId>cassandra-all</artifactId>
-			<version>${cassandra.version}</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.scale7</groupId>
-			<artifactId>scale7-pelops</artifactId>
-			<version>1.3-1.1.x</version>
-		</dependency>
-		
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
@@ -123,6 +113,42 @@
 
 	</dependencies>
 
+  <profiles>
+
+    <profile>
+      <id>all</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
+        <module>cassandra-core</module>
+        <module>cassandra-pelops</module>
+      </modules>
+    </profile>
+
+    <profile>
+      <id>pelops</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <modules>
+        <module>cassandra-core</module>
+        <module>cassandra-pelops</module>
+      </modules>
+    </profile>
+
+    <profile>
+      <id>thrift</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <modules>
+        <module>cassandra-core</module>
+        <module>cassandra-thrift</module>
+      </modules>
+    </profile>
+
+</profiles>
 	<!-- Assembly build -->
 	<build>
 		<plugins>
@@ -144,46 +170,7 @@
 					</filesets>
 				</configuration>
 			</plugin>
-			<plugin>
-				<!-- NOTE: We don't need a groupId specification because the group is 
-					org.apache.maven.plugins ...which is assumed by default. -->
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2.1</version>
-				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.2</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
-				<version>2.14.1</version> <configuration> <forkMode>pertest</forkMode> <argLine>-Xms256m 
-				-Xmx1024m -XX:MaxPermSize=512m</argLine> <parallel>tests</parallel> <threadCount>10</threadCount> 
-				</configuration> </plugin> -->
-			<!-- <plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> 
-				<configuration> The destination file for the code coverage report has to 
-				be set to the same value in the parent pom and in each module pom. Then JaCoCo 
-				will add up information in the same report, so that, it will give the cross-module 
-				code coverage. <destFile>${project.basedir}/../target/jacoco-it.exec</destFile> 
-				</configuration> <executions> <execution> <id>post-test</id> <configuration> 
-				<skip>true</skip> </configuration> </execution> </executions> </plugin> -->
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
-				<version>2.9</version> <configuration> <forkCount>10</forkCount> <reuseForks>true</reuseForks> 
-				<argLine>-Xmx512M</argLine> </configuration> </plugin> -->
 		</plugins>
-
-
 	</build>
 
 </project>
